# kiran-biometrics

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README  README.en.md  README.md
data/: CMakeLists.txt  biometrics-marshal.list  com.kylinsec.Kiran.SystemDaemon.Biometrics.service  com.kylinsec.Kiran.SystemDaemon.Biometrics.service.in  com.kylinsec.Kiran.SystemDaemon.Biometrics.xml  kiran-system-daemon-biometrics.service.in  kiran_biometrics.conf  settings.conf.in
fprint-modules/: CMakeLists.txt  aratfingerprint.c  kiran-fprint-module.h  zkfingerprint.c
pam/: CMakeLists.txt  kiran-pam-msg.h  kiran-pam.c  kiran-pam.h  pam-kiran-authmode.c  pam-kiran-face.c  pam-kiran-fprintd.c
po/: CMakeLists.txt  POTFILES.in  bo_CN.po  kk_KG.po  kk_KZ.po  mn_MN.po  ug_CN.po  untitled.pot  zh_CN.po
src/: CMakeLists.txt  config.h.in  kiran-biometrics-i.h.in  kiran-biometrics-types.h  kiran-biometrics.c  kiran-biometrics.h  kiran-face-manager.c  kiran-face-manager.h  kiran-face-msg.h  kiran-fprint-manager.c  kiran-fprint-manager.h  kiran-fprint-module.c  kiran-fprint-module.h  main.c
